re PR rtl-optimization/61673 (Miscompilation of _gnutls_hostname_compare on s390)

PR rtl-optimization/61673
	* combine.c (simplify_comparison): Test just mode's sign bit
	in tmode rather than the sign bit and any bits above it.

	* gcc.c-torture/execute/pr61673.c: New test.

From-SVN: r212365